# src/dish/dish.route.ts
@@ -11,6 +11,6 @@ export const dishRouter = Router();
 
 dishRouter.post('/add', add);
 dishRouter.get('/findAll', findAll);
-dishRouter.get('/findOne/:id', findOne);
-dishRouter.put('/update/:id', update);
-dishRouter.delete('/remove/:id', remove);
+dishRouter.get('/id/:id', findOne);
+dishRouter.put('/:id', update);
+dishRouter.delete('/:id', remove);
