# src/ingredient/ingredient.controller.ts
@@ -46,7 +46,7 @@ async function findAll(req: Request, res: Response) {
 }
 
 async function findOne(req: Request, res: Response) {
-  const idInput = await IngredientIdSchema.safeParseAsync(req.body.id);
+  const idInput = await IngredientIdSchema.safeParseAsync(req.params);
   if (!idInput.success) {
     return res
       .status(400)
@@ -63,7 +63,7 @@ async function findOne(req: Request, res: Response) {
 }
 
 async function update(req: Request, res: Response) {
-  const idInput = await IngredientIdSchema.safeParseAsync(req.body.id);
+  const idInput = await IngredientIdSchema.safeParseAsync(req.params);
   if (!idInput.success) {
     return res.status(400).json({
       message: 'Validation error',
@@ -95,14 +95,17 @@ async function update(req: Request, res: Response) {
 }
 
 async function remove(req: Request, res: Response) {
-  const idInput = await IngredientIdSchema.safeParseAsync(req.body.id);
+  const idInput = await IngredientIdSchema.safeParseAsync(req.params);
   if (!idInput.success) {
     return res
       .status(400)
       .json({ message: 'Validation error', error: idInput.error });
   }
   try {
-    await ingredientService.deleteIngredient(idInput.data);
+    const deleted = await ingredientService.deleteIngredient(idInput.data);
+    if(!deleted){
+      return res.status(404).json({ message: 'Ingredient not found' });
+    }
     return res.status(200).json({
       message: 'Ingredient deleted successfully',
     });
